# koneko-rs

./: Cargo.toml  README.md
koneko-rs/src/: config.rs  data.rs  files.rs  main.rs  printer.rs  pure.rs  screens.rs  ui.rs  utils.rs
mix/: Cargo.toml
mix/src/: api.rs  lscat.rs  main.rs
src/: colors.rs  config.rs  data.rs  files.rs  main.rs  printer.rs  pure.rs  utils.rs
