[package]
name = "koneko-rs"
version = "0.1.0"
authors = ["twenty5151 <tsuiyikching@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.56"
dirs = "3.0.1"
regex = "1.3.9"

[dev-dependencies]
rstest = "0.6.4"
maplit = "1.0.2"
